@@ -1,0 +1,1 @@
+MD5 03552c7151e9125b6f8a2496d4203488 cegui_mk2-0.4.0.tar.bz2 13500075
