@@ -1,6 +1,11 @@
 # ChangeLog for dev-games/cegui
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/cegui/ChangeLog,v 1.2 2005/07/25 23:16:18 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/cegui/ChangeLog,v 1.3 2005/09/25 08:43:20 vapier Exp $
+
+*cegui-0.4.0 (25 Sep 2005)
+
+  25 Sep 2005; Mike Frysinger <vapier@gentoo.org> +cegui-0.4.0.ebuild:
+  Version bump #105152 by Mathias Weber.
 
 *cegui-0.3.0 (25 Jul 2005)
 
